added hvw controller removed unused files
